--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -4,8 +4,8 @@
 
 
     <TextView
-        android:layout_width="1600px"
-        android:layout_height="220px"
+        android:layout_width="460dp"
+        android:layout_height="65dp"
         android:background="#29417F"
         android:id="@+id/textView4"
         android:layout_alignParentBottom="true"
@@ -23,7 +23,7 @@
         android:layout_alignTop="@+id/textView4"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:paddingTop="10px"/>
+        android:paddingTop="7dp"/>
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -31,11 +31,10 @@
         android:id="@+id/imageButton2"
         android:src="@drawable/add2"
         android:background="@null"
-        android:layout_marginRight="46dp"
-        android:layout_marginEnd="46dp"
         android:layout_alignBottom="@+id/imageButton"
-        android:layout_toLeftOf="@+id/imageButton3"
-        android:layout_toStartOf="@+id/imageButton3" />
+        android:layout_toRightOf="@+id/textView8"
+        android:layout_toEndOf="@+id/textView8"
+        android:paddingBottom="6dp"/>
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -43,12 +42,9 @@
         android:id="@+id/imageButton3"
         android:src="@drawable/book2"
         android:background="@null"
-        android:layout_marginRight="39dp"
-        android:layout_marginEnd="39dp"
-        android:paddingBottom="30px"
-        android:layout_alignTop="@+id/imageButton2"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignBottom="@+id/imageButton2"
+        android:layout_toRightOf="@+id/textView2"
+        android:layout_toEndOf="@+id/textView2" />
 
     <ImageButton
         android:layout_width="wrap_content"
@@ -59,7 +55,279 @@
         android:layout_marginLeft="43dp"
         android:layout_marginStart="43dp"
         android:layout_alignParentBottom="true"
+        android:paddingBottom="4dp"
         android:layout_toRightOf="@+id/imageButton"
         android:layout_toEndOf="@+id/imageButton" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Upcoming Events"
+        android:id="@+id/textView"
+        android:layout_marginTop="22dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Upcoming Assignments"
+        android:id="@+id/textView2"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/imageButton"
+        android:layout_toEndOf="@+id/imageButton" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Linkedin Lab"
+        android:id="@+id/textView3"
+        android:layout_below="@+id/textView"
+        android:layout_alignLeft="@+id/imageButton"
+        android:layout_alignStart="@+id/imageButton"
+        android:layout_marginTop="33dp"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Network Cafe"
+        android:id="@+id/textView5"
+        android:layout_below="@+id/textView3"
+        android:layout_alignLeft="@+id/textView3"
+        android:layout_alignStart="@+id/textView3"
+        android:layout_marginTop="32dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="GenerationYou Event"
+        android:id="@+id/textView6"
+        android:layout_below="@+id/textView5"
+        android:layout_alignLeft="@+id/textView5"
+        android:layout_alignStart="@+id/textView5"
+        android:layout_marginTop="38dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Peer Design Review"
+        android:layout_marginTop="20dp"
+        android:id="@+id/textView7"
+        android:layout_below="@+id/textView17"
+        android:layout_alignLeft="@+id/textView6"
+        android:layout_alignStart="@+id/textView6" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Mid Semester Deliverable"
+        android:id="@+id/textView8"
+        android:layout_below="@+id/textView7"
+        android:layout_alignLeft="@+id/textView7"
+        android:layout_alignStart="@+id/textView7"
+        android:layout_marginTop="32dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Persona Interaction Design"
+        android:id="@+id/textView9"
+        android:layout_below="@+id/textView8"
+        android:layout_alignLeft="@+id/textView8"
+        android:layout_alignStart="@+id/textView8"
+        android:layout_marginTop="35dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Next Tuesday"
+        android:id="@+id/textView10"
+        android:layout_alignTop="@+id/textView3"
+        android:layout_toRightOf="@+id/textView"
+        android:layout_toEndOf="@+id/textView"
+        android:textColor="#BEBEBE"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Next Tuesday"
+        android:id="@+id/textView11"
+        android:layout_alignTop="@+id/textView5"
+        android:layout_alignLeft="@+id/textView10"
+        android:layout_alignStart="@+id/textView10"
+        android:textColor="#BEBEBE"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Next Friday"
+        android:id="@+id/textView12"
+        android:layout_alignTop="@+id/textView6"
+        android:layout_alignRight="@+id/textView11"
+        android:layout_alignEnd="@+id/textView11"
+        android:textColor="#BEBEBE"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Next Wednesday"
+        android:id="@+id/textView13"
+        android:layout_above="@+id/textView8"
+        android:layout_alignRight="@+id/textView11"
+        android:layout_alignEnd="@+id/textView11"
+        android:textColor="#BEBEBE"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Next Friday"
+        android:id="@+id/textView14"
+        android:layout_alignTop="@+id/textView8"
+        android:layout_alignRight="@+id/textView13"
+        android:layout_alignEnd="@+id/textView13"
+        android:textColor="#BEBEBE"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Next Friday"
+        android:id="@+id/textView15"
+        android:layout_alignTop="@+id/textView9"
+        android:layout_alignLeft="@+id/textView14"
+        android:layout_alignStart="@+id/textView14"
+        android:textColor="#BEBEBE"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:id="@+id/textView16"
+        android:background="#97ACE2"
+        android:text="Upcoming Events"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:paddingLeft="130sp"
+        android:paddingTop="20sp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:id="@+id/textView17"
+        android:background="#97ACE2"
+        android:text="Upcoming Assignment"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:paddingLeft="110sp"
+        android:paddingTop="20sp"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
+
+    <View
+        android:id="@+id/UnderLine"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:layout_marginTop="15dp"
+        android:background="#9A9A9A"
+        android:layout_below="@+id/textView3"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <View
+        android:id="@+id/UnderLine2"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:layout_marginTop="15dp"
+        android:background="#9A9A9A"
+        android:layout_below="@+id/textView5"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <View
+        android:id="@+id/UnderLine3"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="#9A9A9A"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/textView6"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <View
+        android:id="@+id/UnderLine4"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="#9A9A9A"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/textView7"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <View
+        android:id="@+id/UnderLine5"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="#9A9A9A"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/textView8"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <View
+        android:id="@+id/UnderLine6"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="#9A9A9A"
+        android:layout_marginTop="15dp"
+        android:layout_below="@+id/textView9"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="View More Event >>"
+        android:layout_marginTop="10dp"
+        android:textColor="#428bca"
+        android:id="@+id/textView18"
+        android:layout_below="@+id/UnderLine3"
+        android:layout_alignLeft="@+id/textView6"
+        android:layout_alignStart="@+id/textView6" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="View More Assignment >>"
+        android:layout_marginTop="10dp"
+        android:textColor="#428bca"
+        android:id="@+id/textView19"
+        android:layout_below="@+id/UnderLine6"
+        android:layout_alignLeft="@+id/imageButton"
+        android:layout_alignStart="@+id/imageButton" />
+
 
 </RelativeLayout>
